# CavalierContoursDev

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CavalierContoursDev.pro  README.md
benchmarks/: CMakeLists.txt  areabenchmarks.cpp  benchmarkprofiles.h  benchmarks.cpp  clipperbenchmarks.cpp  combinebenchmarks.cpp  extentsbenchmarks.cpp  offsetbenchmarks.cpp  pathlengthbenchmarks.cpp  spatialindexbenchmarks.cpp  windingnumberbenchmarks.cpp
interactiveui/: BooleanOpsAlgorithmScene.qml  CMakeLists.txt  GeometrySceneView.qml  HilbertCurveScene.qml  OffsetAlgorithmScene.qml  PlineCombineScene.qml  PlineOffsetIslandsScene.qml  PlineOffsetScene.qml  demofuncs.cpp  demofuncs.h  flatcolorgeometrynode.cpp  flatcolorgeometrynode.h  geometrycanvasitem.cpp  geometrycanvasitem.h  graphicshelpers.cpp  graphicshelpers.h  main.cpp  main.qml  plineboolopsalgorithmview.cpp  plineboolopsalgorithmview.h  plinecombinealgorithmview.cpp  plinecombinealgorithmview.h  plineoffsetalgorithmview.cpp  plineoffsetalgorithmview.h  plineoffsetislandsalgorithmview.cpp  plineoffsetislandsalgorithmview.h  plinesegmentnode.cpp  plinesegmentnode.h  pointsetnode.cpp  pointsetnode.h  polylinenode.cpp  polylinenode.h  qml.qrc  rawoffsetsegmentsnode.cpp  rawoffsetsegmentsnode.h  simplecirclenode.cpp  simplecirclenode.h  spatialindexboundingboxesnode.cpp  spatialindexboundingboxesnode.h
